--- a/globe.html
+++ b/globe.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bottle</title>
+    <title>Globe</title>
 </head>
 <body background="../backgroundimage.jpeg">
-    <h1>Image: Bottle</h1>
+    <h1>Image: Globe</h1>
     <a href="../index.html"><button id="backbutton">Home Page</button></a>
 </body>
 </html>
