--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Object Detection Webapp</title>
 </head>
-<body>
+<body background="backgroundimage.jpeg">
+    <center>
     <h1>Object Detection</h1>
-    <button id="1" class="buttons">Bottle</button>
-    <button id="2" class="buttons">Globe</button>
-    <button id="3" class="buttons">Book</button>
-    <button id="4" class="buttons">Laptop</button>
-    <button id="5" class="buttons">Bag</button>
+    <a href="bottle/bottle.html"><button id="1" class="buttons">Bottle</button></a>
+    <a href="globe/globe.html"><button id="2" class="buttons">Globe</button></a>
+    <a href=""><button id="3" class="buttons">Book</button></a>
+    <a href="#"><button id="4" class="buttons">Laptop</button></a>
+    <a href="#"><button id="5" class="buttons">Bag</button></a>
+    </center>
+
 </body>
 </html>
