--- a/bottle.html
+++ b/bottle.html
@@ -6,12 +6,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Noto+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js" integrity="sha512-3RlxD1bW34eFKPwj9gUXEWtdSMC59QqIqHnD8O/NoTwSJhgxRizdcFVQhUMFyTp5RwLTDL0Lbcqtl8b7bFAzog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link href="bottle.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bottle</title>
 </head>
-<body background="../backgroundimage.jpeg">
+<body>
     <h1>Image: Bottle</h1>
+    <h2 id="status"></h2>
+    <h2 id="object"></h2>
+    <h2 id="confidence"></h2>
+    <img src="bottle.jpeg">
+    <br><br>
     <a href="../index.html"><button id="backbutton">Home Page</button></a>
+    <script src="bottle.js"></script>
 </body>
 </html>
