--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <h1>Object Detection</h1>
     <h2>This website is a test for the CocoSSD model that uses the Tensorflow.js API to detect multiple objects in a single shot. It can work with photos and videos. Here we are using it to detect objects in a test scene. There are five different objects that the model is tested on.</h2>
 
-    <a href="bottle/bottle.html"><button id="1" class="buttons">Bottle</button></a>
-    <a href="globe/globe.html"><button id="2" class="buttons">Globe</button></a>
-    <a href="book/book.html"><button id="3" class="buttons">Book</button></a>
-    <a href="laptop/laptop.html"><button id="4" class="buttons">Laptop</button></a>
-    <a href="bag/bag.html"><button id="5" class="buttons">Bag</button></a>
+    <a href="bottle.html"><button id="1" class="buttons">Bottle</button></a>
+    <a href="globe.html"><button id="2" class="buttons">Globe</button></a>
+    <a href="book.html"><button id="3" class="buttons">Book</button></a>
+    <a href="laptop.html"><button id="4" class="buttons">Laptop</button></a>
+    <a href="bag.html"><button id="5" class="buttons">Bag</button></a>
     </center>
 </body>
 </html>
